--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,5 +19,6 @@ dependencies {
     compile group: 'io.undertow', name: 'undertow-servlet', version: '2.0.30.Final'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
